--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,16 @@
 }
 
 body {
-    background: white;
+    background: black;
     font-family: sans-serif;
+    color: white;
     margin: 0;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
-    background: lightslategray;
-    color: white;
+    background: darkslategray;
 }
 
 h1 { /*"View Highscores*/
@@ -25,13 +25,17 @@ h2 { /*"Time"*/
     margin-right: 20px;
 }
 
+h1:hover{
+    color: blanchedalmond;
+}
+
 p {
     font-size: 16px;
 }
 
-li{
-    background-color: lightslategray;
-    color: black; 
+li {
+    background-color: darkcyan;
+    color: white; 
     border-style: solid;
     border-width: 1px;
     padding: 5px;
@@ -39,6 +43,12 @@ li{
     font-size: 18px;
     text-align: left;
 }
+
+li:hover {
+    background-color: darkslategray;
+    color: white;
+}
+
 #initial-page {
     display: block;
 }
@@ -71,14 +81,28 @@ section { /* initial page, question page, done page, highscore styling */
 
 section h2 { /* section title styling */
     font-size: 26px;
-    color: navy;
+    color: white;
     align-items: center;
 }
 
 #start-button {
     color: white;
-    background-color: lightslategray;
-    font-size: 32px;
+    background-color: darkcyan;
+    font-size: 28px;
+    margin: 20px;
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+
+#start-button:hover {
+    background-color: darkslategray;
+    box-shadow: 0 0 5px 5px darkcyan;
+}
+
+#submit-button, #back-button, #clear-button {
+    color: white;
+    background-color: darkcyan;
+    font-size: 18px;
     margin: 20px;
     padding: 0px 10px;
     border-radius: 5px;
