--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,23 +53,8 @@ li:hover {
     margin: auto;
     display: block;
 }
-#done-page {
-    margin: auto;
-    display: none;
-}
 
-#question-page { /*question and answer styling*/
-    margin: auto;
-    display: block;
-    flex-direction: column;
-    align-items: center;
-}
-
-/* #highscores:focus {
-    display: block;
-} */
-
-#question-page, #done, #highscores {
+#question-page, #done-page, #highscores {
     margin: auto;
     display: none;
 }
